# mtv-api-tests

./: .gitignore  .gitleaksignore  .markdownlint.yaml  .pr_agent.toml  .pre-commit-config.yaml  .providers.json.example  CLAUDE.md  Dockerfile  OWNERS  README.md  conftest.py  jira.cfg.example  pyproject.toml  pytest.ini  report.py  requirements.txt
.claude/commands/: code-review.md
docs/: advanced-plan-features.html  advanced-plan-features.md  architecture-and-workflow.html  architecture-and-workflow.md  automation-and-release.html  automation-and-release.md  cleanup-and-teardown.html  cleanup-and-teardown.md  cold-migrations.html  cold-migrations.md  container-and-openshift-job-execution.html  container-and-openshift-job-execution.md  copy-offload-migrations.html  copy-offload-migrations.md  development-workflow.html  development-workflow.md  extending-the-suite.html  extending-the-suite.md  hooks-and-expected-failures.html  hooks-and-expected-failures.md  index.html  installation-and-local-setup.html  installation-and-local-setup.md  introduction.html  introduction.md  llms-full.txt  llms.txt  optional-integrations-and-secrets.html  optional-integrations-and-secrets.md  plan-and-resource-reference.html  plan-and-resource-reference.md  prerequisites.html  prerequisites.md  project-structure.html  project-structure.md  provider-and-inventory-reference.html  provider-and-inventory-reference.md  provider-config-file.html  provider-config-file.md  pytest-options-and-markers.html  (+18 more)
exceptions/: exceptions.py
guides/copyoffload/: how-to-run-copyoffload-tests.md
libs/: base_provider.py  forklift_inventory.py
libs/providers/: cnv.py  openshift.py  openstack.py  ova.py  rhv.py  vmware.py
scale-tests/: config-scale-rhv449-warm-3disks.py  config-scale-vmware65-warm.py  config-scale-vmware67.py
scripts/: run_interop_tests.sh  run_mtv-test-con.sh  run_mtv-test.sh
tests/: test_copyoffload_migration.py  test_mtv_cold_migration.py  test_mtv_warm_migration.py  test_warm_migration_comprehensive.py  tui_test.go
tests/cold/: test_cold_migration_comprehensive.py  (+2 more)
tests_config_scale/: config-scale-rhv449-warm.py  config-scale-rhv449.py  config-scale-vmware65.py  config-scale-vmware67-warm.py  config-scale-vmware70.py
tools/: bm-dns-setup.sh  mtv_iib.py  release_tests_vms_names.py
utilities/: copyoffload_constants.py  copyoffload_migration.py  hooks.py  logger.py  migration_utils.py  mtv_migration.py  must_gather.py  naming.py  post_migration.py  pytest_utils.py  resources.py  ssh_utils.py  utils.py  vmware_guest_operations.py
(+34 files in other folders)
