[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.ruff.lint]
select = ["PLC0415"]

[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[dependency-groups]
dev = ["ipdb>=0.13.13", "ipython>=8.12.3", "python-jenkins>=1.8.2"]

[project]
requires-python = ">=3.12, <3.14"
name = "mtv-api-tests"
version = "2.8.3"
description = "MTV API Tests"
authors = []
license = "Apache Software License"
readme = "README.md"
dependencies = [
  "humanfriendly>=10.0",
  "openstacksdk>=4.0.0",
  "ovirt-python-sdk>=1.2.0",
  "pytest>=8.3.3",
  "pytest-progress>=1.3.0",
  "pytest-testconfig>=0.2.0",
  "python-glanceclient>=4.7.0",
  "pytz>=2024.2",
  "pyvmomi>=8.0.3.0.1",
  "python-simple-logger>=2.0.0",
  "shortuuid>=1.0.13",
  "pytest-xdist>=3.6.1",
  "setuptools>=75.8.0",
  "pandas>=2.2.3",
  "cloudpickle>=3.1.1",
  "pytest-harvest>=1.10.5",
  "pyhelper-utils>=1.0.9",
  "openshift-python-utilities>=6.0.7",
  "pytest-profiling>=1.8.1",
  "semver>=3.0.4",
  "typer>=0.15.1",
  "openshift-python-wrapper>=11.0.53",
  "pytest-jira>=0.3.22",
  "marshmallow==3.26.1",
  "rich>=14.0.0",
  "python-rrmngmnt>=0.2.0",
  "jc>=1.25.0",
]
